Script to load Team banner images integrated. post-3 overflow issue fixed

--- a/app/css/mobile_media.css
+++ b/app/css/mobile_media.css
@@ -275,6 +275,7 @@
   /* Post 3 */
   .post-3 {
     width: 100%;
+    overflow: hidden;
   }
   .post-3 .post-3-cont {
     padding: 60px 0 120px;
